gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: NAMESPACE_NAME-gateway
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: gateway
    expose: "true"
  annotations:
    haproxy.router.openshift.io/timeout: 120s
  name: gateway
spec:
  host: gateway-NAMESPACE_NAME.DOMAIN
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway
    weight: 100
  wildcardPolicy: None
