keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: NAMESPACE_NAME-keycloak
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: keycloak
    expose: "true"
  name: keycloak
spec:
  host: keycloak-NAMESPACE_NAME.DOMAIN
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: NAMESPACE_NAME-keycl-http
    weight: 100
  wildcardPolicy: None
