web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: NAMESPACE_NAME-web
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: web
    expose: "true"
    category: route
  name: web
spec:
  host: web-NAMESPACE_NAME.DOMAIN
  port:
    targetPort: tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
